# webclub-crawler

./: .env.example  .gitignore  README.md  pyproject.toml  webclub_requests_crawler.py  webclub_selenium_crawler.py
src/webclub_crawler/: __init__.py  cli.py  config.py  exporters.py  models.py  parsers.py  selection.py
src/webclub_crawler/crawlers/: requests_best_times.py  selenium_best_times.py
